// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HumanInviteCode - Snapshots > matches snapshot for complete code state 1`] = `
<div>
  <div
    class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6"
    data-testid="container"
  >
    <h1
      class="font-bold text-foreground text-5xl lg:text-6xl"
      data-testid="heading-1"
    >
      Prove you're 
      <span
        class="text-brand"
      >
        not a Robot.
      </span>
    </h1>
    <div
      class="mx-auto w-full flex flex-row items-center gap-3"
      data-testid="container"
    >
      <h2
        class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
      >
        SMS or payment verification not available. Ask us for an invite code.
      </h2>
      <a
        class="cursor-pointer transition-colors text-sm text-muted-foreground hover:text-brand"
        href="https://x.com/pubky"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          class="lucide-x-twitter h-6 w-6"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#clip0_18345_202114)"
          >
            <path
              d="M14.2833 10.1616L23.2178 -0.000732422H21.1006L13.3427 8.8231L7.14656 -0.000732422H0L9.36984 13.3425L0 23.9993H2.11732L10.3098 14.681L16.8534 23.9993H24L14.2827 10.1616H14.2833ZM11.3833 13.46L10.4339 12.1313L2.88022 1.55888H6.1323L12.2282 10.0912L13.1776 11.4199L21.1016 22.5106H17.8495L11.3833 13.4605V13.46Z"
              fill="currentColor"
              opacity="0.8"
            />
          </g>
          <defs>
            <clippath
              id="clip0_18345_202114"
            >
              <rect
                fill="white"
                height="24"
                width="24"
              />
            </clippath>
          </defs>
        </svg>
      </a>
      <a
        class="cursor-pointer transition-colors text-sm text-muted-foreground hover:text-brand"
        href="https://t.me/pubkychat"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          class="lucide-telegram h-6 w-6"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.5 2.5L2 11l7.5 3L19 4.5l-6 11.5 3 6.5 5.5-20z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    class="flex rounded-xl bg-card text-card-foreground shadow-sm flex-row items-start gap-12 overflow-hidden p-12"
    data-slot="card"
    data-testid="human-invite-code-card"
  >
    <div
      class="mx-auto w-full flex-col hidden shrink-0 lg:flex lg:h-48 lg:w-48"
      data-testid="container"
    >
      <img
        alt="Gift"
        class="max-w-full h-full w-full object-cover"
        data-nimg="1"
        decoding="async"
        height="192"
        loading="lazy"
        src="/images/gift.webp"
        style="color: transparent;"
        width="192"
      />
    </div>
    <div
      class="mx-auto w-full flex max-w-xl min-w-0 flex-1 flex-col gap-6"
      data-testid="container"
    >
      <div
        class="mx-auto w-full flex-col flex gap-3"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex flex-row items-center gap-1"
          data-testid="container"
        >
          <h3
            class="text-2xl leading-8 font-bold text-foreground"
            data-testid="typography"
          >
            Invite code for homeserver
          </h3>
          <button
            aria-controls="radix-normalized"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs hover:text-accent-foreground hover:bg-accent/50 border-none size-9 h-6 w-6 opacity-80"
            data-as-child="true"
            data-size="icon"
            data-slot="popover-trigger"
            data-state="closed"
            data-testid="popover-trigger"
            data-variant="ghost"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-question-mark h-4 w-4 text-white"
              data-testid="circle-help-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </button>
        </div>
        <p
          class="text-base leading-6 font-medium text-secondary-foreground/80"
          data-testid="typography"
        >
          You get 1GB of storage, used for your posts, photos, videos, and your profile.
        </p>
      </div>
      <div
        class="mx-auto w-full flex-col flex gap-6"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex flex-row items-center gap-3 rounded-md border border-dashed bg-background/10 px-5 py-4 shadow-xs border-brand"
          data-testid="container"
        >
          <input
            class="file:text-foreground selection:bg-primary selection:text-primary-foreground border-input flex w-full min-w-0 rounded-md border shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:outline-none hover:ring-0 focus:ring-offset-0 h-auto flex-1 border-none bg-transparent p-0 text-base placeholder:text-muted-foreground focus:ring-0 focus:outline-none font-bold text-brand"
            data-cy="human-invite-code-input"
            data-testid="human-invite-code-input"
            maxlength="14"
            placeholder="XXXX-XXXX-XXXX"
            type="text"
            value="N76Q-G32N-C0RG"
          />
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check h-6 w-6 shrink-0 text-brand"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
        </div>
        <div
          class="mx-auto w-full flex flex-row items-center gap-4"
          data-testid="container"
        >
          <button
            aria-label="Custom homeserver"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 gap-1 px-4 py-2 has-[>svg]:px-4 shrink-0 rounded-full opacity-40"
            data-slot="button"
            data-variant="secondary"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-server mr-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="8"
                rx="2"
                ry="2"
                width="20"
                x="2"
                y="2"
              />
              <rect
                height="8"
                rx="2"
                ry="2"
                width="20"
                x="2"
                y="14"
              />
              <line
                x1="6"
                x2="6.01"
                y1="6"
                y2="6"
              />
              <line
                x1="6"
                x2="6.01"
                y1="18"
                y2="18"
              />
            </svg>
            Custom homeserver
          </button>
          <p
            class="text-base leading-6 font-medium text-secondary-foreground"
            data-testid="typography"
          >
            Using a different homeserver will be possible soon.
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="mock-human-footer"
  >
    Human Footer
  </div>
  <div
    class="mx-auto w-full flex mt-6 flex-row justify-between gap-3 lg:gap-6"
    data-testid="container"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive cursor-pointer border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 h-auto gap-2 px-4 py-2.5 sm:px-8 sm:py-5 text-sm font-bold leading-normal w-full flex-1 rounded-full md:flex-0"
      data-size="lg"
      data-slot="button"
      data-variant="secondary"
      id="human-invite-back-btn"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left mr-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
      Back
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive cursor-pointer border shadow-xs bg-brand/16 text-brand hover:!bg-brand/30 border-brand h-auto gap-2 px-4 py-2.5 sm:px-8 sm:py-5 text-sm font-bold leading-normal w-full flex-1 rounded-full md:flex-0"
      data-cy="human-invite-code-continue-btn"
      data-size="lg"
      data-slot="button"
      data-variant="default"
      id="human-invite-continue-btn"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right mr-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
      Continue
    </button>
  </div>
</div>
`;

exports[`HumanInviteCode - Snapshots > matches snapshot for empty state 1`] = `
<div>
  <div
    class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6"
    data-testid="container"
  >
    <h1
      class="font-bold text-foreground text-5xl lg:text-6xl"
      data-testid="heading-1"
    >
      Prove you're 
      <span
        class="text-brand"
      >
        not a Robot.
      </span>
    </h1>
    <div
      class="mx-auto w-full flex flex-row items-center gap-3"
      data-testid="container"
    >
      <h2
        class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
      >
        SMS or payment verification not available. Ask us for an invite code.
      </h2>
      <a
        class="cursor-pointer transition-colors text-sm text-muted-foreground hover:text-brand"
        href="https://x.com/pubky"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          class="lucide-x-twitter h-6 w-6"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#clip0_18345_202114)"
          >
            <path
              d="M14.2833 10.1616L23.2178 -0.000732422H21.1006L13.3427 8.8231L7.14656 -0.000732422H0L9.36984 13.3425L0 23.9993H2.11732L10.3098 14.681L16.8534 23.9993H24L14.2827 10.1616H14.2833ZM11.3833 13.46L10.4339 12.1313L2.88022 1.55888H6.1323L12.2282 10.0912L13.1776 11.4199L21.1016 22.5106H17.8495L11.3833 13.4605V13.46Z"
              fill="currentColor"
              opacity="0.8"
            />
          </g>
          <defs>
            <clippath
              id="clip0_18345_202114"
            >
              <rect
                fill="white"
                height="24"
                width="24"
              />
            </clippath>
          </defs>
        </svg>
      </a>
      <a
        class="cursor-pointer transition-colors text-sm text-muted-foreground hover:text-brand"
        href="https://t.me/pubkychat"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          class="lucide-telegram h-6 w-6"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.5 2.5L2 11l7.5 3L19 4.5l-6 11.5 3 6.5 5.5-20z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    class="flex rounded-xl bg-card text-card-foreground shadow-sm flex-row items-start gap-12 overflow-hidden p-12"
    data-slot="card"
    data-testid="human-invite-code-card"
  >
    <div
      class="mx-auto w-full flex-col hidden shrink-0 lg:flex lg:h-48 lg:w-48"
      data-testid="container"
    >
      <img
        alt="Gift"
        class="max-w-full h-full w-full object-cover"
        data-nimg="1"
        decoding="async"
        height="192"
        loading="lazy"
        src="/images/gift.webp"
        style="color: transparent;"
        width="192"
      />
    </div>
    <div
      class="mx-auto w-full flex max-w-xl min-w-0 flex-1 flex-col gap-6"
      data-testid="container"
    >
      <div
        class="mx-auto w-full flex-col flex gap-3"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex flex-row items-center gap-1"
          data-testid="container"
        >
          <h3
            class="text-2xl leading-8 font-bold text-foreground"
            data-testid="typography"
          >
            Invite code for homeserver
          </h3>
          <button
            aria-controls="radix-normalized"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs hover:text-accent-foreground hover:bg-accent/50 border-none size-9 h-6 w-6 opacity-80"
            data-as-child="true"
            data-size="icon"
            data-slot="popover-trigger"
            data-state="closed"
            data-testid="popover-trigger"
            data-variant="ghost"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-question-mark h-4 w-4 text-white"
              data-testid="circle-help-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </button>
        </div>
        <p
          class="text-base leading-6 font-medium text-secondary-foreground/80"
          data-testid="typography"
        >
          You get 1GB of storage, used for your posts, photos, videos, and your profile.
        </p>
      </div>
      <div
        class="mx-auto w-full flex-col flex gap-6"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex flex-row items-center gap-3 rounded-md border border-dashed bg-background/10 px-5 py-4 shadow-xs border-input"
          data-testid="container"
        >
          <input
            class="file:text-foreground selection:bg-primary selection:text-primary-foreground border-input flex w-full min-w-0 rounded-md border shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:outline-none hover:ring-0 focus:ring-offset-0 h-auto flex-1 border-none bg-transparent p-0 text-base font-medium placeholder:text-muted-foreground focus:ring-0 focus:outline-none text-foreground"
            data-cy="human-invite-code-input"
            data-testid="human-invite-code-input"
            maxlength="14"
            placeholder="XXXX-XXXX-XXXX"
            type="text"
            value=""
          />
        </div>
        <div
          class="mx-auto w-full flex flex-row items-center gap-4"
          data-testid="container"
        >
          <button
            aria-label="Custom homeserver"
            class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 gap-1 px-4 py-2 has-[>svg]:px-4 shrink-0 rounded-full opacity-40"
            data-slot="button"
            data-variant="secondary"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-server mr-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="8"
                rx="2"
                ry="2"
                width="20"
                x="2"
                y="2"
              />
              <rect
                height="8"
                rx="2"
                ry="2"
                width="20"
                x="2"
                y="14"
              />
              <line
                x1="6"
                x2="6.01"
                y1="6"
                y2="6"
              />
              <line
                x1="6"
                x2="6.01"
                y1="18"
                y2="18"
              />
            </svg>
            Custom homeserver
          </button>
          <p
            class="text-base leading-6 font-medium text-secondary-foreground"
            data-testid="typography"
          >
            Using a different homeserver will be possible soon.
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="mock-human-footer"
  >
    Human Footer
  </div>
  <div
    class="mx-auto w-full flex mt-6 flex-row justify-between gap-3 lg:gap-6"
    data-testid="container"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive cursor-pointer border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 h-auto gap-2 px-4 py-2.5 sm:px-8 sm:py-5 text-sm font-bold leading-normal w-full flex-1 rounded-full md:flex-0"
      data-size="lg"
      data-slot="button"
      data-variant="secondary"
      id="human-invite-back-btn"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-left mr-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
      Back
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive cursor-pointer border shadow-xs bg-brand/16 text-brand hover:!bg-brand/30 border-brand h-auto gap-2 px-4 py-2.5 sm:px-8 sm:py-5 text-sm font-bold leading-normal w-full flex-1 rounded-full md:flex-0"
      data-cy="human-invite-code-continue-btn"
      data-size="lg"
      data-slot="button"
      data-variant="default"
      disabled=""
      id="human-invite-continue-btn"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right mr-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
      Continue
    </button>
  </div>
</div>
`;
